--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<!--- ICS2O-My first PWA --->
+<!--- ICS2OR-Unit-5-07 --->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My first PWA" />
+    <meta name="description" content="ICS2OR-Unit-5-07" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Ashley Monaghan" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>GitHub page as PWA template</title>
+    <title>While Loop</title>
     <link
       rel="canonical"
-      href="https://ashley-monaghan.github.io/ICS2O-PWA-Test/"
+      href="https://ashley-monaghan.github.io/ICS2OR-Unit-5-07/"
     />
-    <link rel="manifest" href="/ICS2O-PWA-Test/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS2OR-Unit-5-07/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
