--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- Raised button with ripple for math -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="calculate()"
+          onclick="myButtonClicked()"
         >
           Math!!
         </button>
