--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
           </div>
         </form>
         <p></p>
-        <!-- Raised button with ripple for math -->
+        <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="myButtonClicked()"
         >
-          Math!!
+          Calculate
         </button>
         <!-- basic text -->
         <p></p>
-        <div id="words"></div>
+        <div id="product"></div>
       </main>
     </div>
   </body>
