--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first PWA</title>
+  <title>While Loop</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Fancy border!</span>
+          <span class="mdl-layout-title">★・・・・・・・・・★・・・・・・・・・★</span>
         </div>
       </header>
       <main class="mdl-layout__content">
-        <h5>Description</h5>
-        <h6>More words</h6>
+        <h5>Enter a number:</h5>
+        <h6>This will add up all intergers until it reaches itself...</h6>
         <!-- Image -->
         <p></p>
         <img src="./images/vine.svg" alt="vine.svg" width="60%" height="60%" />
